# SpectraForge_M

./: .gitignore  PROMPT2.md  QUICKSTART.md  README.md  commits.md  main.py  pyproject.toml  requirements.txt
scenes/: demo.json
spectraforge/: __init__.py  adaptive.py  aov.py  bloom.py  bvh.py  camera.py  color_correction.py  denoiser.py  environment.py  lights.py  materials.py  mis.py  obj_loader.py  postprocess.py  ray.py  renderer.py  scene_parser.py  shapes.py  textures.py  tonemapping.py  ui.py  ui_server.py  vec3.py  volumes.py
spectraforge-metal/: .gitignore  Makefile  README.md  TODO.md  ui_server.py
spectraforge-metal/include/: spectraforge.h
spectraforge-metal/scenes/: motion_blur.json  simple.json
spectraforge-metal/shaders/: intersect.metal  materials.metal  pathtracer.metal  textures.metal  tonemap.metal  types.metal
spectraforge-metal/src/: bvh.c  image.c  main.m  preview.m  renderer.m  scene_loader.c
spectraforge-metal/tests/: test_parameters.py
spectraforge/static/: app.js  index.html  style.css
tests/: __init__.py  test_adaptive.py  test_aov.py  test_bloom.py  test_bvh.py  test_camera.py  test_color_correction.py  test_denoiser.py  test_environment.py  test_light_sampling.py  test_lights.py  test_materials.py  test_mis.py  test_motion_blur.py  test_obj_loader.py  test_postprocess.py  test_ray.py  test_renderer.py  test_shapes.py  test_textures.py  test_tonemapping.py  test_ui_server.py  test_vec3.py  test_volumes.py
